# run-hub

./: CLAUDE.md  README.md  package-lock.json  package.json
scripts/: release.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  pty.rs  tray.rs
src/components/: CommandPalette.tsx  ConfigDialog.tsx  EmptyState.tsx  SettingsDialog.tsx  Sidebar.tsx  SidebarFolder.tsx  SidebarItem.tsx  StatusBar.tsx  TerminalManager.tsx  TerminalSearch.tsx  TerminalToolbar.tsx  TerminalView.tsx  TitleBar.tsx
src/hooks/: useKeyboardShortcuts.ts  useTerminal.ts
src/stores/: configStore.ts  processStore.ts  settingsStore.ts
src/types/: index.ts
src/utils/: ansiUtils.ts  commandBuilder.ts  intellijParser.ts  terminalBuffer.ts
